haskell/hmx/test/HMX/files/ill-typed/012_let_in_let.lam
let f = (/x. /y. let g = x y in g) in f (/z. z + 1) false
